# codegraph-py

./: .gitignore  pyproject.toml
codegraph/: PUBLISHING.md  README.md  __init__.py  cli.py  codegraph.py  directory.py  pyproject.toml  types.py
codegraph/codegraph/: __init__.py  __main__.py  cli.py  codegraph.py  directory.py  errors.py  project_config.py  types.py  utils.py
codegraph/codegraph/context/: __init__.py
codegraph/codegraph/db/: __init__.py  connection.py  queries.py
codegraph/codegraph/extraction/: __init__.py  tree_sitter_extractor.py
codegraph/codegraph/extraction/languages/: __init__.py  base.py  dart_cfg.py  java_cfg.py  lua_cfg.py  python_cfg.py  ruby_cfg.py  swift_cfg.py
codegraph/codegraph/graph/: __init__.py
codegraph/codegraph/installer/: __init__.py
codegraph/codegraph/mcp/: __init__.py
codegraph/codegraph/resolution/: __init__.py
codegraph/codegraph/search/: __init__.py
codegraph/codegraph/sync/: __init__.py
codegraph/codegraph/ui/: __init__.py
codegraph/db/: connection.py  queries.py  schema.sql
codegraph/extraction/: __init__.py  route_detector.py  tree_sitter_extractor.py
codegraph/extraction/languages/: __init__.py  base.py  c_cfg.py  cpp_cfg.py  go_cfg.py  java_cfg.py  javascript_cfg.py  kotlin_cfg.py  php_cfg.py  rust_cfg.py  scala_cfg.py  swift_cfg.py  typescript_cfg.py
codegraph/graph/: __init__.py
codegraph/mcp/: __init__.py
codegraph/resolution/: __init__.py
codegraph/sync/: __init__.py
codegraph/tests/: test_codegraph.py  test_stress.py
tests/: test_codegraph.py
