[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph-py"
version = "1.3.4"
description = "Supercharge AI coding agents with semantic code intelligence — surgical context, fewer tool calls, faster answers. 100% local."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["code-intelligence", "knowledge-graph", "static-analysis", "mcp", "ai-agent", "tree-sitter"]
authors = [
    {name = "mading", email = "martin98@bu.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
# Core tree-sitter runtime (no language grammars)
ts = ["tree-sitter>=0.21"]

# Individual language grammars — install only what you need.
# Note: version constraints use the actual lowest-available version
# on PyPI to keep `pip install` resolvable for every language.
python = ["tree-sitter>=0.21", "tree-sitter-python>=0.21"]
javascript = ["tree-sitter>=0.21", "tree-sitter-javascript>=0.21"]
typescript = ["tree-sitter>=0.21", "tree-sitter-typescript>=0.21"]
java = ["tree-sitter>=0.21", "tree-sitter-java>=0.21"]
go = ["tree-sitter>=0.21", "tree-sitter-go>=0.21"]
rust = ["tree-sitter>=0.21", "tree-sitter-rust>=0.21"]
c = ["tree-sitter>=0.21", "tree-sitter-c>=0.21"]
cpp = ["tree-sitter>=0.21", "tree-sitter-cpp>=0.21"]
cs = ["tree-sitter>=0.21", "tree-sitter-c-sharp>=0.21"]
ruby = ["tree-sitter>=0.21", "tree-sitter-ruby>=0.21"]
swift = ["tree-sitter>=0.21", "tree-sitter-swift>=0.1"]
kotlin = ["tree-sitter>=0.21", "tree-sitter-kotlin>=1.0"]
dart = ["tree-sitter>=0.21", "tree-sitter-dart==0.1.0"]
scala = ["tree-sitter>=0.21", "tree-sitter-scala>=0.23"]
lua = ["tree-sitter>=0.21", "tree-sitter-lua>=0.2"]
php = ["tree-sitter>=0.21", "tree-sitter-php>=0.22.4"]

# All language grammars (equivalent to the old [ts])
ts-all = [
    "codegraph-py[python,javascript,typescript,java,go,rust,c,cpp,cs,ruby,swift,kotlin,dart,scala,lua,php]"
]

watch = ["watchfiles>=0.20.0"]
all = ["codegraph-py[ts-all,watch]"]

[project.urls]
Homepage = "https://github.com/martin98-afk/codegraph-py"
Source = "https://github.com/martin98-afk/codegraph-py"
Issues = "https://github.com/martin98-afk/codegraph-py/issues"

[project.scripts]
codegraph = "codegraph.cli:main"

[tool.setuptools.packages.find]
include = ["codegraph*"]
exclude = ["tests"]

[tool.setuptools.package-data]
"codegraph.db" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"