[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codegraph"
version = "1.0.0"
description = "Supercharge AI coding agents with semantic code intelligence — surgical context, fewer tool calls, faster answers. 100% local."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["code-intelligence", "knowledge-graph", "static-analysis"]

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
mcp = []
ts = [
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-rust>=0.21",
]
watch = ["watchfiles>=0.20.0"]
all = ["codegraph[ts,mcp,watch]"]

[project.urls]
Homepage = "https://github.com/colbymchenry/codegraph"
Source = "https://github.com/colbymchenry/codegraph"

[project.scripts]
codegraph = "codegraph.cli:main"

[tool.setuptools.packages.find]
include = ["codegraph*"]

[tool.setuptools.package-data]
codegraph = ["db/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
